--- a/content/publication/example/cite.bib
+++ b/content/publication/example/cite.bib
@@ -1,8 +1,10 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@article{hyder2022community,
+  title={Community-based Systems Dynamics for Reproductive Health: An Example from Urban Ohio},
+  author={Hyder, Ayaz and Smith, Mikaela and Sealy-Jefferson, Shawnita and Hood, Robert B and Chettri, Shibani and Dundon, Ashley and Underwood, Abigail and Bessett, Danielle and Norris, Alison H},
+  journal={Progress in Community Health Partnerships: Research, Education, and Action},
+  volume={16},
+  number={3},
+  pages={361--383},
+  year={2022},
+  publisher={Johns Hopkins University Press}
 }
